fix: color of GitHub headine SVG in dark mode

--- a/src/assets/styles/base/typography.css
+++ b/src/assets/styles/base/typography.css
@@ -89,6 +89,7 @@ h6:first-of-type {
 
 /** GitHub Style Anchor */
 .anchor {
+  fill: var(--color-fg);
   float: left;
   line-height: 1;
   margin-inline-start: -20px;
